# astrometry

./: .gitignore  pyproject.toml  readme.md  requirements.txt  stars.csv
astro/: .env:Zone.Identifier  01_step.py  02_step.py  README.md  algorithm.py  main.py
astro/astro/: main.py
astro/astro/base_operations/: calculations.py
astro/astro/core/: location_settings.py  progressbar_settings.py
astro/astro/db_connector/: connector.py
astro/base_operations/: calculations.py
astro/core/: config.py  location_settings.py  logger_settings.py
data/: 1698333181386O-result.csv  1700037663609O-result.csv  1700037752440O-result.csv  kepler-62-near.csv  kepler-62.csv  kepler-62_near.csv
