[tool.poetry]
name = "astro"
version = "0.1.0"
description = ""
authors = ["Zer0DeD <109874123+Zer0DeD@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
loguru = "^0.7.2"
alive-progress = "^3.1.4"
decouple = "^0.0.7"
mysql-connector = "^2.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
